# amplihack-recipe-runner

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SCORECARD.md  book.toml  deny.toml  test_edge.sh  test_manual_edge.sh  test_trailing_fn.sh
.cargo/: audit.toml
.claude/runtime/: launcher_context.json  sessions.jsonl
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: bot-detection.lock.yml  bot-detection.md  ci.yml  copilot-setup-steps.yml  pages.yml  release.yml  repo-guardian-gate.yml  repo-guardian.lock.yml  repo-guardian.md
docs/src/: README.md  SUMMARY.md  architecture.md  cli-reference.md  conditions.md  examples-patterns.md  examples-tutorials.md  howto-heartbeat-output.md  howto-progress-markers.md  production-recipes.md  progress-markers.md  quickstart.md  rate-limit-handling.md  scorecard.md  shell-template-rendering.md  testing-recipes.md  yaml-format.md
examples/patterns/: ci-pipeline.yaml  code-review.yaml  deploy-pipeline.yaml  investigation.yaml  migration.yaml  multi-agent-consensus.yaml  quality-audit.yaml  self-improvement.yaml
proptest-regressions/: condition.txt
recipes/: build-recipe-runner.yaml
scripts/: bump-version.sh
src/: agent_resolver.rs  condition.rs  context.rs  discovery.rs  lib.rs  main.rs  models.rs  parser.rs  progress_validator.rs  runner.rs  update.rs
src/adapters/: mod.rs  (+1 more)
tests/: discovery_tests.rs  example_tests.rs  feature_tests.rs  integration.rs  outside_in_tests.rs  pr6_unwrap_to_expect_tests.rs  recipe_tests.rs  sub_recipe_resolution_test.rs
(+32 files in other folders)
