[package]
name = "recipe-runner-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the amplihack recipe runner"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
regex = "1"
shell-escape = "0.1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
